project images and movies added

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@300..700&display=swap');
 :root {
   --white: #f5f8fa;
@@ -36,6 +35,10 @@ html {
   scroll-behavior: smooth;
 }
 
+ul {
+  list-style: none;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -49,6 +52,11 @@ html {
 
 body {
   line-height: 1.5;
+}
+
+section {
+  margin: 1.5rem auto;
+  width: 90%;
 }
 
 .site {
@@ -83,6 +91,7 @@ a {
 a {
   text-decoration: none;
 }
+
 a:hover {
   cursor: pointer;
 }
@@ -94,7 +103,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  padding: 1rem 4.2rem;
+  padding: 1rem;
   background: var(--primary-color);
   z-index: 20;
 }
@@ -137,6 +146,22 @@ header {
 
 .hamburger {
   display: flex;
+  flex-direction: column;
+}
+
+.hamburger .bar {
+  width: 32px;
+  height: 5px;
+  border-radius: 6px;
+  background: var(--white);
+  margin-bottom: 5px;
+}
+
+.section-anchor {
+  display: block;
+  position: relative;
+  height: 0;
+  visibility: hidden;
 }
 
 .menu-links {
@@ -145,7 +170,6 @@ header {
 
 .menu-links a {
   color: var(--white);
-
 }
 
 .menu-links a:hover {
@@ -155,18 +179,15 @@ header {
 .split-screen-hero {
   align-items: center;
   display: flex;
-  gap: 60px;
-  padding: 0 60px;
-  max-width: 1400px;
+  flex-direction: column-reverse;
+  gap: 10px;
   width: 100%;
-  margin: 120px auto;
 }
 
 .profile-image-coin {
   border-radius: 50%;
-  margin: 0 auto;
-  height: 400px;
-  width: 400px;
+  height: 200px;
+  width: 200px;
   position: relative;
 }
 
@@ -205,116 +226,44 @@ header {
 .details {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding-right: 60px;
-  width: 60%;
+  gap: 20px;
+  width: 90%;
 }
 
 .details h1 {
   color: var(--primary-darkest);
-  font-size: 2.5rem;
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.details h1 .title-pipe {
+  display: none;
 }
 
 .details p {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  line-height: 1.2;
 }
 
-/* NEED FOR ROLLOVER. REFER TO THIS LATER  */
 .social-links {
+  display: none;
+}
+
+.social-icons {
   display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.social-icons a {
+  color: var(--black);
 }
 
 .icons {
   margin: 0em 0.25em;
   float: left;
-}
-
-.social-links-holder {
-  position: relative;
-  height: 2.25em;
-  perspective: 500px;
-  width: 10rem;
-}
-
-.social-links-holder .block {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transition: all 1s;
-  transform: translateZ(-18px);
-}
-
-.social-links-handle {
-  display: flex;
-  justify-content: center;
-  gap: 8px;
-}
-.social-links-holder .block .social-links-platform,
-.social-links-holder .block .social-links-handle {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #f5f8fa;
-  transition: background 1s;
-}
-.social-links-holder .block .social-links-platform {
-  transform: rotateX(0deg) translateZ(18px);
-}
-.social-links-holder .block .social-links-handle {
-  transform: rotateX(-90deg) translateZ(18px);
-}
-.social-links-holder:hover .block {
-  transform: translateZ(-18px) rotateX(90deg);
-}
-
-.social-links-holder.linkedIn .block .social-links-platform,
-.social-links-holder.linkedIn .block .social-links-handle {
-  background: #007bb5;
-}
-.social-links-holder.linkedIn .block .social-links-handle {
-  background: #002436;
-}
-.social-links-holder.linkedIn:hover .block .social-links-handle {
-  background: #007bb5;
-}
-.social-links-holder.linkedIn:hover .block .social-links-platform {
-  background: #36beff;
-}
-
-.social-links-holder.gitHub .block .social-links-platform,
-.social-links-holder.gitHub .block .social-links-handle {
-  background: #787878;
-}
-.social-links-holder.gitHub .block .social-links-handle {
-  background: #383838;
-}
-.social-links-holder.gitHub:hover .block .social-links-handle {
-  background: #787878;
-}
-.social-links-holder.gitHub:hover .block .social-links-platform {
-  background: #b8b8b8;
-}
-
-.social-links-holder.codePen .block .social-links-platform,
-.social-links-holder.codePen .block .social-links-handle {
-  background: #191919;
-}
-.social-links-holder.codePen .block .social-links-handle {
-  background: black;
-}
-.social-links-holder.codePen:hover .block .social-links-handle {
-  background: #191919;
-}
-.social-links-holder.codePen:hover .block .social-links-platform {
-  background: #595959;
 }
 
 .projectDesc {
@@ -338,7 +287,39 @@ header {
   color: #652e67;
 }
 
+/* PROJECT CARDS  */
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.img-container {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.img-container img {
+  width: 100%;
+}
+
+/* HOVER IMG CONT TO SHOW VID , hover on desk */
+.project-video-container {
+  display: none;
+}
+
+@media screen and (min-width: 475px) {
+  section {
+    margin: 3rem auto;
+  }
+}
+/* katy CHANGE TO FLEX ROW  */
 @media screen and (min-width: 820px) {
+  header {
+    padding: 1rem 4.2rem;
+  }
+
   .hamburger {
     display: none;
   }
@@ -350,4 +331,176 @@ header {
     justify-content: space-around;
     align-items: center;
   }
+
+  .split-screen-hero {
+    flex-direction: row;
+    gap: 60px;
+  }
+  .profile-image-coin {
+    margin: 0 auto;
+    height: 400px;
+    width: 400px;
+  }
+  .details {
+    gap: 30px;
+    padding-right: 60px;
+    width: 60%;
+  }
+  .details h1 {
+    font-size: 2.5rem;
+  }
+
+  .details h1 .title-pipe {
+    display: inline;
+  }
+  .details h1 .title-break {
+    display: none;
+  }
+
+  /* PROJECT CARDS  */
+  .project-card {
+    flex-direction: row;
+  }
+
+  .project-card:nth-of-type(odd) {
+    flex-direction: row-reverse;
+  }
+
+  .img-container {
+    width: 320px;
+    height: 320px;
+  }
+  .img-container:hover + .project-video-container {
+    display: block;
+  }
 }
+
+@media screen and (min-width: 900px) {
+  section {
+    width: 90%;
+    margin: 3.5rem auto;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  /* LINKS WITH HOVER EFFECT ONLY ON DESKTOP */
+  .social-links {
+    display: flex;
+  }
+  .social-icons {
+    display: none;
+  }
+
+  .social-links-holder {
+    position: relative;
+    height: 2.25em;
+    perspective: 500px;
+    width: 10rem;
+  }
+
+  .social-links-holder .block {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 1s;
+    transform: translateZ(-18px);
+  }
+
+  .social-links-handle {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+  }
+  .social-links-holder .block .social-links-platform,
+  .social-links-holder .block .social-links-handle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f5f8fa;
+    transition: background 1s;
+  }
+  .social-links-holder .block .social-links-platform {
+    transform: rotateX(0deg) translateZ(18px);
+  }
+  .social-links-holder .block .social-links-handle {
+    transform: rotateX(-90deg) translateZ(18px);
+  }
+
+  .social-links-holder:hover .block {
+    transform: translateZ(-18px) rotateX(90deg);
+  }
+
+  /* LINKEDIN  */
+  .social-links-holder.linkedIn .block .social-links-platform,
+  .social-links-holder.linkedIn .block .social-links-handle {
+    background: #007bb5;
+  }
+  .social-links-holder.linkedIn .block .social-links-handle {
+    background: #002436;
+  }
+  .social-links-holder.linkedIn:hover .block .social-links-handle {
+    background: #007bb5;
+  }
+  .social-links-holder.linkedIn:hover .block .social-links-platform {
+    background: #36beff;
+  }
+
+  /* GITHUB  */
+
+  .social-links-holder.gitHub .block .social-links-platform,
+  .social-links-holder.gitHub .block .social-links-handle {
+    background: #787878;
+  }
+  .social-links-holder.gitHub .block .social-links-handle {
+    background: #383838;
+  }
+  s .social-links-holder.gitHub:hover .block .social-links-handle {
+    background: #787878;
+  }
+  .social-links-holder.gitHub:hover .block .social-links-platform {
+    background: #b8b8b8;
+  }
+  /* CODEPEN  */
+  .social-links-holder.codePen .block .social-links-platform,
+  .social-links-holder.codePen .block .social-links-handle {
+    background: #191919;
+  }
+  .social-links-holder.codePen .block .social-links-handle {
+    background: black;
+  }
+  .social-links-holder.codePen:hover .block .social-links-handle {
+    background: #191919;
+  }
+  .social-links-holder.codePen:hover .block .social-links-platform {
+    background: #595959;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  section {
+    margin: 0px auto;
+    width: 100%;
+    padding: 0 60px;
+    max-width: 1400px;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  section {
+    width: 85%;
+    max-width: 1700px;
+    margin: 100px auto;
+  }
+}
+
+/* @media screen and (min-width: 1130px) {
+  widt
+} */
